--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "parallax-js": "^3.1.0",
     "postcss": "^8.4.18",
     "react": "^17.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0",
     "react-pdf": "^6.1.0",
     "react-router-dom": "^5.3.4",
