--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "https://mikhailmena.github.io/Transition_Website/",
   "name": "auth0-react-sample",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "npm-run-all --parallel spa api-server",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^6.1.2",
+    "gh-pages": "^4.0.0",
     "helmet": "^4.4.1",
     "highlight.js": "^10.0.3",
     "jwks-rsa": "^1.12.2",
