changed homepage path in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mikhailmena.github.io/",
+  "homepage": "https://mikhailmena.github.io/Transition_Website/",
   "name": "auth0-react-sample",
   "version": "0.1.0",
   "private": true,
